# titlecase

./: .gitignore  .travis.yml  LICENSE  Main.hs  README.md  package.yaml  shell.nix  titlecase.cabal
.github/workflows/: haskell-ci.yml
src/Data/Text/: Titlecase.hs
src/Data/Text/Titlecase/: Internal.hs
tests/: Main.hs  Property.hs  Test.hs  Unit.hs
tests/Test/: Property.hs  Unit.hs
