name:                titlecase
version:             0.1.0.0
synopsis:            Convert words to title case
license:             BSD3
license-file:        LICENSE
author:              Nikita Karetnikov
maintainer:          nikita@karetnikov.org
copyright:           2015 Nikita Karetnikov
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -Wall -O2
  exposed-modules:     Data.Text.Titlecase
                     , Data.Text.Titlecase.Internal
  build-depends:       base >=4.7 && <4.8
                     , blaze-markup
                     , semigroups
                     , text

test-suite test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Test.hs
  ghc-options:         -Wall -O2
  build-depends:       base >=4.7 && <4.8
                     , semigroups
                     , tasty
                     , tasty-quickcheck
                     , text
                     , titlecase
